# Gstreamer_iMX

./: CMakeLists.txt  README.md
cmake/: FindGLIB2.cmake  FindGObject.cmake  FindGStreamer.cmake  FindLibXml2.cmake
src/: CMakeLists.txt  main.cpp  stream.cpp  stream.h
