CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_AUTOMOC TRUE)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

#FIND_PACKAGE(PkgConfig REQUIRED)
#PKG_CHECK_MODULES(LIBXML2 REQUIRED libxml-2.0)
FIND_PACKAGE(LibXml2 REQUIRED)
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIRS})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

#PKG_CHECK_MODULES(GOBJECT REQUIRED gobject-2.0)
FIND_PACKAGE(GObject REQUIRED)
INCLUDE_DIRECTORIES(${GOBJECT_INCLUDE_DIRS})
ADD_DEFINITIONS(${GOBJECT_DEFINITIONS})

#PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)
FIND_PACKAGE(GLIB2 REQUIRED)
INCLUDE_DIRECTORIES(${GLIB2_INCLUDE_DIRS})

#PKG_CHECK_MODULES(GSTREAMER REQUIRED gstreamer-0.10)
FIND_PACKAGE(GStreamer REQUIRED)
INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS}) 

FIND_PACKAGE(Boost REQUIRED COMPONENTS iostreams thread system regex)

IF(Boost_FOUND)
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS})
  
  SET(Gstreamer_iMX_SOURCES main.cpp stream.cpp)

  SET(Gstreamer_iMX_SOURCES stream.h)

  ADD_EXECUTABLE( Gstreamer_iMX 
    ${Gstreamer_iMX_SOURCES} 
    ${Gstreamer_iMX_SOURCES}
  )
  
  TARGET_LINK_LIBRARIES(Gstreamer_iMX ${Boost_LIBRARIES} pthread)
  TARGET_LINK_LIBRARIES(Gstreamer_iMX ${GLIB2_LIBRARIES} pthread)
  TARGET_LINK_LIBRARIES(Gstreamer_iMX ${GOBJECT_LIBRARIES} pthread)
  TARGET_LINK_LIBRARIES(Gstreamer_iMX ${GSTREAMER_LIBRARIES} pthread)
  TARGET_LINK_LIBRARIES(Gstreamer_iMX ${LIBXML2_LIBRARIES} pthread)
  
  INSTALL(TARGETS Gstreamer_iMX RUNTIME DESTINATION /usr/bin)

ENDIF()